Add support for containerd 2.0
This commit implements the following changes:
- Add matrix testing for containerd versions 1.7.26 and 2.0.3 in CI workflow
- Update default root directory path to follow containerd snapshotter convention
- Enhance installation scripts to handle different containerd versions
- Add version-specific configuration for containerd 1.x and 2.0+
- Update README.md to update the config both for containerd version 1.7.x and 2.0.x

Signed-off-by: ChengyuZhu6 <hudson@cyzhu.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,9 +60,15 @@ jobs:
             bin/containerd-guest-pull-grpc
 
   integration-test:
-    name: Integration Test
+    name: Integration Test (containerd ${{ matrix.containerd-version }})
     runs-on: ubuntu-24.04
     needs: [build]
+    strategy:
+      matrix:
+        containerd-version: ['1.7.26', '2.0.3']
+      fail-fast: false
+    env:
+      CONTAINERD_VERSION: ${{ matrix.containerd-version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
